--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export(XYFrame)
 export(dep_corejs)
 export(dep_semiotic)
 export(rem_axes)
+export(rem_lines)
 export(rem_points)
 export(remiotic)
 export(remioticOutput)
 export(renderRemiotic)
+export(spiotic)
+import(htmltools)
 import(htmlwidgets)
