--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,31 @@
 Package: remiotic
 Type: Package
-Title: What the Package Does (Title Case)
+Title: 'Htmlwidget' for Elijah Meeks Semiotic Visualizations
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
-Encoding: UTF-8
-LazyData: true
+Date: 2018-03-11
+Authors@R: c(
+      person(
+        "Elijah", "Meeks"
+        , role = c("aut", "cph")
+        , comment = "Semiotic charting library in www/semiotic, https://emeeks.github.io/semiotic/"
+      ),
+      person(
+        "Kent", "Russell"
+        , role = c("aut", "cre")
+        , comment = "R interface"
+        , email = "kent.russell@timelyportfolio.com"
+      )
+    )
+Maintainer: Kent Russell <kent.russell@timelyportfolio.com>
+URL: https://github.com/timelyportfolio/remiotic
+BugReports: https://github.com/timelyportfolio/remiotic/issues
+Description: Make interactive 'Semiotic' charts in R with the
+    convenience and infrastructure of an 'htmlwidget'.
+License: MIT + file LICENSE
+LazyData: TRUE
+Imports:
+    dplyr,
+    htmlwidgets,
+    htmltools,
+    reactR
 RoxygenNote: 6.0.1
